# my_mubble_insta_template

./: .gitignore  README.md  pyproject.toml
instamubble/: __init__.py
instamubble/api/: __init__.py  api.py
instamubble/bot/: __init__.py  bot.py  message.py
instamubble/client/: aiohttp.py
instamubble/types/: __init__.py  message.py
